<resources>
    <string name="app_name">Dut healthcare</string>
    <string name="verified">Verified!</string>
    <string name="scrollable_cards">Scrollable cards</string>
    <string name="appointments">Book appointment</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="login">Login/Sign up</string>
    <string name="dut_heal_care">DUT HealthCare</string>
    <string name="logo_image">Logo image</string>
    <string name="user_appointments">user appointments</string>
    <string name="your_appointments">Your appointments</string>
    <string name="insights">Insights</string>
    <string name="reminders">Reminders</string>
    <string name="our_doctors">Our Doctors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="comment_on_service">Comment on service</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="login_text">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="book_appointment">Book appointment</string>
    <string name="for_emergency_call_10177_nonly_schedule_for_non_ugernt_appointments">For emergency call 10177.\nOnly schedule for non-ugernt appointments</string>
    <string name="view_history">View history</string>
    <string name="phone_number">Phone number</string>
    <string name="student_number">Student number</string>
    <string name="appointment_history">Appointment history</string>
    <string name="student_no">Student no</string>
    <string name="service">Clinical Service</string>
    <string name="reason">Reason</string>
    <string name="symptoms">Symptoms</string>
    <string name="recent_appointment">Recent appointment</string>
    <string name="description">Description</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="change_password">Change password</string>
    <string name="create_new_password">Create new password</string>
    <string name="current_password">Current password</string>
    <string name="verify_password">Verify password</string>
    <string name="you_need_to_verify_that_it_s_you">You need to verify that it\'s you.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_passwordd">New password</string>
    <string name="delete_profile">Delete profile</string>
    <string name="danger_zone">Danger zone</string>
</resources>