<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity"
    android:scrollbars="none">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:id="@+id/signup_card">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_text"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/dark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_name"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/name"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/email"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/phone_no"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/student_no"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/student_number"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_username"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/username"
                android:drawablePadding="8dp"
                android:textColor="@color/dark"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:textColor="@color/dark"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_up"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/already_a_user_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark"
                android:textSize="18sp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="10dp"
            android:id="@+id/verify_card"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Verify Email"
                android:textSize="30sp"
                android:textColor="@color/lime"
                android:textStyle="bold"
                android:id="@+id/verify_text"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/verify_text"
                android:id="@+id/verify_edit"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:hint="Verification code"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:inputType="number"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Verify email"
                android:id="@+id/verify_button"
                android:layout_below="@+id/verify_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>