<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@drawable/login"
            android:padding="10dp"
            android:layout_gravity="center">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="35dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="24dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_text"
                        android:textSize="36sp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/dark"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/login_email"
                        android:layout_marginTop="40dp"
                        android:padding="5dp"
                        android:background="@drawable/edit_text"
                        android:gravity="center"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:drawablePadding="8dp"
                        android:textColor="@color/dark"
                        tools:ignore="Autofill" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:id="@+id/login_password"
                        android:layout_marginTop="20dp"
                        android:padding="5dp"
                        android:background="@drawable/edit_text"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawablePadding="8dp"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/forgot_password_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password_link"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="end"
                        android:textColor="@color/blue"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="@string/login_text"
                        android:id="@+id/login_button"
                        android:textSize="18sp"
                        android:layout_marginTop="15dp">

                    </Button>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/signupRedirectText"
                        android:text="@string/not_yet_registered_sign_up"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/blue"
                        android:textSize="16sp"/>

                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>