<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MenuActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/dutlogo"
                android:orientation="vertical"
                android:padding="10dp">

            </LinearLayout>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dut_heal_care"
                android:textColor="@color/dark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/book_appointment"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:background="@drawable/baseline_bookmark_add_24">

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/appointments"
                            android:textColor="@color/dark"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/history"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/baseline_history_24">

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/view_history"
                            android:textColor="@color/dark"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

<!--                <androidx.cardview.widget.CardView-->
<!--                    android:id="@+id/insights"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="90dp"-->
<!--                    android:layout_margin="5dp">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:gravity="center"-->
<!--                        android:orientation="vertical"-->
<!--                        android:padding="5dp">-->

<!--                        <LinearLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="50dp"-->
<!--                            android:background="@drawable/baseline_insights_24">-->

<!--                        </LinearLayout>-->

<!--&lt;!&ndash;                        <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                            android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                            android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                            android:layout_gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                            android:text="@string/insights"&ndash;&gt;-->
<!--&lt;!&ndash;                            android:textColor="@color/dark"&ndash;&gt;-->
<!--&lt;!&ndash;                            android:textStyle="bold" />&ndash;&gt;-->
<!--                    </LinearLayout>-->
<!--                </androidx.cardview.widget.CardView>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center">



<!--                <androidx.cardview.widget.CardView-->
<!--                    android:id="@+id/comment"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="90dp"-->
<!--                    android:layout_margin="5dp">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:gravity="center"-->
<!--                        android:orientation="vertical"-->
<!--                        android:padding="5dp">-->

<!--                        <LinearLayout-->
<!--                            android:layout_width="60dp"-->
<!--                            android:layout_height="50dp"-->
<!--                            android:background="@drawable/baseline_add_comment_24">-->

<!--                        </LinearLayout>-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_gravity="center"-->
<!--                            android:text="@string/comment_on_service"-->
<!--                            android:textColor="@color/dark"-->
<!--                            android:textStyle="bold" />-->
<!--                    </LinearLayout>-->
<!--                </androidx.cardview.widget.CardView>-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>